# vedic-edu-sys-insight-engine

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/ves_ie_tools/: constants.py
src/ves_ie_tools/ocr/: ocr_pdf.py
tests/ocr/: test_ocr_pdf_integration.py
